<resources>
    <string name="app_name">玩安卓</string>
    <string name="home_page">首页</string>
    <string name="project_page">项目</string>
    <string name="resource_page">导航</string>
    <string name="search_page">搜索</string>
    <string name="project_kind">项目类型：</string>
    <string name="menu_user_info">个人信息</string>
    <string name="menu_user_collect">我的收藏</string>
    <string name="user_exit">注销</string>
    <string name="user_login">登录</string>
    <string name="account_input">请输入账号</string>
    <string name="psw_input">请输入密码</string>
    <string name="re_psw_input">请确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
</resources>
